--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,14 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 0 10px
 }
 
 .sliderWrapper {
     display: flex;
+    justify-content: flex-end;
     gap: 10px;
+    flex-grow: 1;
 }
 
 #sliderValue {
@@ -75,3 +78,31 @@ main {
     box-shadow: 0px 0px 20px #888888;
 }
 
+.buttonWrapper {
+    flex-grow: 1;
+    display: flex;
+    gap: 10px;
+}
+
+.buttonWrapper>* {
+    flex: 1 1 0px;
+}
+
+.buttonWrapper button{
+    background-color: rgb(245, 245, 245);
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.buttonWrapper button:hover {
+    background-color: rgb(201, 201, 201);
+    cursor: pointer;
+}
+
+.buttonWrapper .activeButton {
+    color: blue;
+    background-color: rgb(201, 201, 201);
+}
